Model + ViewModel + ListView

--- a/KlasseListeApp/KlasseListeApp.csproj
+++ b/KlasseListeApp/KlasseListeApp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Model\KlasseInfo.cs" />
     <Compile Include="Model\KlasseListe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\KlasseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -128,6 +129,7 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
