--- a/KlasseListeApp/KlasseListeApp.csproj
+++ b/KlasseListeApp/KlasseListeApp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Model\KlasseInfo.cs" />
     <Compile Include="Model\KlasseListe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\KlasseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
