--- a/KlasseListeApp/KlasseListeApp.csproj
+++ b/KlasseListeApp/KlasseListeApp.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Model\KlasseListe.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
+    <Compile Include="ViewModel\AddElevCommand.cs" />
     <Compile Include="ViewModel\KlasseViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
