--- a/KlasseListeApp/KlasseListeApp.csproj
+++ b/KlasseListeApp/KlasseListeApp.csproj
@@ -114,7 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\trash-can.jpg" />
-    <Content Include="Billeder\tumblr_nreno0duJh1td0of9o1_500.gif" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -134,7 +133,9 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Billeder\" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
